[project]
name = "ase2026-reproducible-locator-break-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "unidiff>=0.7.5",
]
